Fix some issues because I rely too much on cursor(for experimental purposes).

--- a/css/main.css
+++ b/css/main.css
@@ -55,9 +55,9 @@ p {
 }
 
 .row{
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    gap: 20px;
     margin-bottom:30px;
 }
 
@@ -168,5 +168,35 @@ p {
     background-color: grey;
 }
 
-/* #output th {
-} */
+ /* Style for the collapsible button */
+ .collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    margin-bottom:10px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+    background-color: #555;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    background-image: url(../assets/images/schema.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:contain;
+    height: 500px;
+    margin-bottom:10px;
+}
